mds: update projected_version when upgrading snaptable

Fixes: http://tracker.ceph.com/issues/38835
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
(cherry picked from commit edf3bcbfa984ea817a9ac5411af23e5a7c29d3d8)

Conflicts:
	src/mds/SnapServer.h
- ceph_assert()